# uconv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp  uconv.cpp  uconv.h  unicode.cpp  unicode.h
